plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev'
    id 'idea'
    id 'de.infolektuell.jextract' version '1.4.0'
}

layout.buildDirectory.set(rootProject.layout.buildDirectory.dir(project.name))

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

jextract {
    libraries {
        wizardry {
            output = file("src/main/java")
            header = file("../wizardry-libs/src/main/include/MathUtils.h")
            targetPackage = "top.begonia.wizardry.natives"
            libraries.add("wizardry-native-libs")
            headerClassName = "MathUtils"
        }
    }
}

neoForge {
    version = project.neo_version
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            jvmArguments.add("--enable-native-access=${mod_id}")
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            jvmArguments.add("--enable-native-access=${mod_id}")
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
            jvmArguments.add("--enable-native-access=${mod_id}")
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        // forRepositories(fg.repository) // Uncomment when using ForgeGradle
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

dependencies {
    implementation "maven.modrinth:u6dRKJwZ:nUDmwyrp"
    implementation project(':wizardry-libs')
    runtimeOnly project(path: ':wizardry-libs', configuration: 'default')
}

tasks.register('copyWizardryLibs', Copy) {
    def nativeProject = project(':wizardry-libs')
    dependsOn nativeProject.tasks.named('assemble')
    from rootProject.layout.buildDirectory.dir("wizardry-libs/lib/lib")
    into layout.buildDirectory.dir("resources/main/natives")
    include "**/*.dll", "**/*.so", "**/*.dylib"
}

tasks.named('processResources') {
    dependsOn 'copyWizardryLibs'
    filteringCharset = 'UTF-8'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_description        : mod_description,
            mod_credits            : mod_credits
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "${rootDir}/${project.name}/src/main/templates"
    into "${rootDir}/build/${project.name}/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.named('jar', Jar) {
    manifest {
        attributes([
                'Specification-Title'   : project.mod_id,
                'Specification-Vendor'  : 'begonia',
                'Specification-Version' : '1',
                'Implementation-Title'  : project.name,
                'Implementation-Version': project.version,
                'Enable-Native-Access'  : project.mod_id
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
